version/0.17/_sources/api/solver/_autosummary/settings/recirculation_outlet.rst.txt
:orphan:

.. _recirculation_outlet:

recirculation_outlet
====================

.. autoclass:: ansys.fluent.core.solver.settings_232.recirculation_outlet.recirculation_outlet
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`recirculation_outlet_child <recirculation_outlet_child>`


.. rubric:: Included in:

================================================   ================================

Parent                                                                      Summary

================================================   ================================
:ref:`boundary_conditions <boundary_conditions>`       'boundary_conditions' child.

================================================   ================================

